# CAGE3D

./: .gitattributes  .gitmodules  CMakeLists.txt
Assets/Shaders/: basic.fs  basic.vs  block.fs  block.vs
Libraries/glad/: CMakeLists.txt
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Libraries/imgui/imgui/: CMakeLists.txt  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h
src/: main.cpp
src/Editor/: Layer.h
src/Engine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  Transform.h  Window.cpp  Window.h
src/OpenGL/: IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Util/: errorReporting.cpp
